--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -5,28 +5,15 @@
 
 <section class="vehiculos-section">
   <div class="grid | vehiculos-container">
-    {% for vehiculo in vehiculos %}
-    <article
-      class="article-container | flex f-direction-column justify-center align-center"
-    >
-      <h2>Carro #{{vehiculo.id}}</h2>
-      <p>{{vehiculo.propietario}}</p>
-      <div class="update-vehiculo-container">
-        <a href="{% url 'update_vehiculo' vehiculo.id %}"
-          ><span class="icon-svg update-icon"></span>
-        </a>
-      </div>
-      <div>
-        <h1 class="letter-spacing-2 clr-almost-red ff-heading fs-700">
-          {{vehiculo.marca}}
-        </h1>
-        <p class="clr-black ff-heading">{{vehiculo.placa}}</p>
-      </div>
-      <p>{{vehiculo.modelo}} {{vehiculo.año}}</p>
-      <span class="clr-soft-black">{{vehiculo.color}}</span>
-    </article>
-
-    {% endfor %}
+    <table class="table">
+      <tr>
+        <th>Vehiculo</th>
+        <th>Propietario</th>
+        <th>Acciones</th>
+      </tr>
+      {% for vehiculo in vehiculos %}
+      {% endfor %}
+    </table>
   </div>
 </section>
 {% endblock %}
