--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -36,6 +36,13 @@
         <nav class="aside-navbar-container">
           <ul class="flex f-direction-column align-center">
             <li>
+              <a href="/" class="clr-almost-red">
+                <div class="icon-container | flex align-center">
+                  <span class="sm-none fs-400">Inicio</span>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="/propietarios/" class="clr-almost-red">
                 <div class="icon-container | flex align-center">
                   <span class="icon-svg propietarios-icon"></span
@@ -44,26 +51,10 @@
               </a>
             </li>
             <li>
-              <a href="/propietario/create" class="clr-almost-red">
-                <div class="icon-container | flex align-center">
-                  <span class="icon-svg add-propietario-icon"></span
-                  ><span class="sm-none fs-400">Agregar propietario</span>
-                </div>
-              </a>
-            </li>
-            <li>
               <a href="/vehiculos/" class="clr-almost-red"
                 ><div class="icon-container | flex align-center">
                   <span class="icon-svg my-vehicle-icon"></span
                   ><span class="sm-none fs-400">Vehiculos</span>
-                </div></a
-              >
-            </li>
-            <li>
-              <a href="/vehiculo/create" class="clr-almost-red">
-                <div class="icon-container | flex align-center">
-                  <span class="icon-svg add-vehicle-icon"></span
-                  ><span class="sm-none fs-400">Agregar vehiculo</span>
                 </div></a
               >
             </li>
