--- a/templates/propietarios.html
+++ b/templates/propietarios.html
@@ -4,6 +4,12 @@
 <h1 class="fs-700">Propietarios Registrados</h1>
 
 <section class="vehiculos-section">
+  <a href="/propietario/create" class="clr-almost-red">
+    <div class="icon-container | flex align-center">
+      <span class="icon-svg add-propietario-icon"></span
+      ><span class="sm-none fs-400">Agregar propietario</span>
+    </div>
+  </a>
   <div class="grid | vehiculos-container">
     {% for propietario in propietarios %}
     <article
