--- a/templates/index.html
+++ b/templates/index.html
@@ -4,23 +4,71 @@
 <h1 class="fs-700">Home</h1>
 
 <section class="vehiculos-section">
-  <div class="grid | vehiculos-container">
-    <article
-      class="article-container | flex f-direction-column justify-center align-center"
+  <div class="flex f-direction-column">
+    <div class="grid vehiculos-container">
+      <article
+        class="article-container | flex f-direction-column justify-center align-center"
+      >
+        <div>
+          <h2>Propietarios registrados</h2>
+          <p>{{propietarios|length }}</p>
+        </div>
+      </article>
+      <article
+        class="article-container | flex f-direction-column justify-center align-center"
+      >
+        <div>
+          <h2>Vehiculos registrados</h2>
+          <p>{{vehiculos|length }}</p>
+        </div>
+      </article>
+      <article
+        class="article-container | flex f-direction-column justify-center align-center"
+      >
+        <div>
+          <h2>Vehiculos en el parqueadero</h2>
+          <p>{{tickets|length }}</p>
+        </div>
+      </article>
+    </div>
+    {% if limit %}
+    <a href="{% url 'ticket.create' %}" class="clr-almost-red">
+      <div class="icon-container | flex align-center">
+        <span class="sm-none fs-400">Registrar entrada</span>
+      </div></a
     >
-      <div>
-        <h2>Propietarios registrados</h2>
-        <p>{{propietarios_len}}</p>
-      </div>
-    </article>
-    <article
-      class="article-container | flex f-direction-column justify-center align-center"
-    >
-      <div>
-        <h2>Vehiculos registrados</h2>
-        <p>{{vehiculos_len}}</p>
-      </div>
-    </article>
+    {% endif %}
+
+    {% if not limit %}
+    <p>Ha llegado al limite!</p>
+    {% endif %}
+
+    <div>
+      <table class="table">
+        <tr>
+          <th>Vehiculo</th>
+          <th>Propietario</th>
+          <th>Hora de Entrada</th>
+          <th>Acciones</th>
+        </tr>
+        {% for ticket in tickets %}
+          <tr>
+            <th>
+              {{ ticket.vehiculo }}
+            </th>
+            <th>
+              {{ ticket.propietario }}
+            </th>
+            <th>
+              {{ ticket.hora_entrada }}
+            </th>
+            <th>
+              <a href="{% url 'ticket_registrar' ticket.id %}">Registrar Salida</a>
+            </th>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
   </div>
 </section>
 {% endblock %}
