--- a/templates/vehiculos.html
+++ b/templates/vehiculos.html
@@ -4,16 +4,31 @@
 <h1 class="fs-700">Vehiculos Registrados</h1>
 
 <section class="vehiculos-section">
-  <div class="grid | vehiculos-container">
-    <table class="table">
-      <tr>
-        <th>Vehiculo</th>
-        <th>Propietario</th>
-        <th>Acciones</th>
-      </tr>
-      {% for vehiculo in vehiculos %}
-      {% endfor %}
-    </table>
+  <div class="vehiculos-container">
+    <a href="/vehiculo/create" class="clr-almost-red">
+      <div class="icon-container | flex align-center">
+        <span class="icon-svg add-vehicle-icon"></span
+        ><span class="sm-none fs-400">Agregar vehiculo</span>
+      </div></a
+    >
+    <div>
+      <table class="table">
+        <tr>
+          <th>Vehiculo</th>
+          <th>Propietario</th>
+          <th>Color</th>
+          <th>Acciones</th>
+        </tr>
+        {% for vehiculo in vehiculos %}
+        <tr>
+          <th>{{vehiculo.marca}} - {{vehiculo.placa}}</th>
+          <th>{{vehiculo.propietario}}</th>
+          <th>{{vehiculo.color}}</th>
+          <th><a href="#">Actualizar Informacion</a></th>
+        </tr>
+        {% endfor %}
+      </table>
+    </div>
   </div>
 </section>
 {% endblock %}
