--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -569,6 +569,7 @@ button-up .ls-none {
 .vehiculos-container {
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
+  margin-bottom: 10px;
 }
 
 .article-container {
@@ -730,4 +731,67 @@ button-up .ls-none {
   max-width: 80%;
   margin-inline: auto;
   flex-direction: column;
+}
+
+table {
+  width: 100%;
+  background-color: white;
+  border-collapse: collapse;
+  text-align: center;
+}
+
+tr:nth-child(even){
+  background-color: #f2f2f2;
+}
+
+td {
+  border: 1px solid #ddd;
+  padding: 4px;
+}
+
+table th {
+  background-color: var(--clr-almost-red-200);
+  color: white;
+  padding-block: 6px;
+}
+
+.wrapp-top{
+  margin-block-end: 20px;
+}
+
+.search{
+  margin: 20px;
+  width: 50%;
+  display: flex;
+  gap: 15px;
+}
+
+.search-bar {
+  padding: 5px;
+  width: 100%;
+  border: 0;
+}
+
+.btn-search {
+  width: 18%;
+  background-color: var(--clr-almost-red);
+  color: white;
+  outline: none;
+  border: 0;
+  box-shadow: 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn-search:hover{
+  background-color: white;
+  color: var(--clr-almost-red);
+}
+
+.title-factura{
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--clr-almost-red);
+  font-family: var(--ff-bold);
 }
