--- a/templates/registrar_ticket.html
+++ b/templates/registrar_ticket.html
@@ -36,7 +36,7 @@
     
     <form method="POST" class="flex formulario">
       {% csrf_token %}
-      <button class="button-update">Registrar Salida</button>
+      <button class="button-update">Confirmar Salida</button>
     </form>
   </div>
 </section>
