--- a/templates/create_ticket.html
+++ b/templates/create_ticket.html
@@ -19,4 +19,57 @@
   </div>
 </section>
 
+  <script>
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+          const cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+              const cookie = cookies[i].trim();
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
+    const propietario_field= document.getElementById('id_propietario')
+    const vehiculo_field = document.getElementById('id_vehiculo')
+    const vehiculo_padre = document.getElementById('vehiculo_padre')
+
+    propietario_field.addEventListener('change', getPropietarioId)
+
+    function getPropietarioId(e){
+      const propietario_id = e.target.value
+      const options = []
+      const data = { id: propietario_id}
+
+      fetch("{% url 'get_vehiculos' %}", {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': csrftoken
+        },
+        body: JSON.stringify(data)
+      })
+        .then(response => response.json())
+        .then(data => {
+          vehiculo_field.innerHTML = ``
+          for(let i=0; data.length; i++){
+            const option = document.createElement('option')
+            option.value = data[i]['id']
+            option.innerHTML = data[i]['placa'] + data[i]['modelo']
+            // municipio_field.innerHTML += `<option value='${data[i]['codigo']}' selected=''>${data[i]['name']}</option>`
+            vehiculo_field.appendChild(option)
+          }
+        })
+        //departamento_field.append(options)
+    }
+  </script>
+
+
 {% endblock %}
